# new_type_presentation

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/advanced_techniques/traits/: collections.rs  deref_and_try_from.rs  derive_more_and_company.rs  mod.rs  specific_traits.rs
src/benefits/: mod.rs
src/benefits/encapsulation/: mod.rs
src/benefits/enhanced_type_safety/: mod.rs
src/benefits/reuseability/: mod.rs
src/benefits/self_documenting/: mod.rs
src/limitations/: client_facing_libraries.rs  mod.rs  over_use.rs  repetitive_code.rs
