[package]
name = "new_type_presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.4.0"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = "1.0.71"
derive_more = "0.99.17"

[dependencies.uuid]
version = "1.3.4"
features = [
    "v4"
]
